Minor fix - removed padding from card column - added margin & align items center to card row - *added padding Y exclusivly for RSUD Dr. Soedono* - digi-kep-card-sle class adjustment

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -60,7 +60,7 @@ body{
 }
 
 .digi-kep-card-sle{
-    font-size: 8px;
+    font-size: 10px;
 }
 
 .digi-kep-card-link{
